Scrap lang shit for simple non-final static fields :)