@@ -2,23 +2,17 @@ package org.selyu.commands.core.provider.impl;
 
 import org.jetbrains.annotations.NotNull;
 import org.selyu.commands.core.argument.CommandArg;
-import org.selyu.commands.core.lang.Lang;
+import org.selyu.commands.core.messages.Messages;
 import org.selyu.commands.core.provider.IParameterProvider;
 
 import java.lang.annotation.Annotation;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public final class BooleanProvider implements IParameterProvider<Boolean> {
-    private static final List<String> SUGGEST = Collections.unmodifiableList(Arrays.asList("true", "false"));
+    private static final List<String> SUGGEST = List.of("true", "false");
     private static final List<String> SUGGEST_TRUE = Collections.singletonList("true");
     private static final List<String> SUGGEST_FALSE = Collections.singletonList("false");
-    private final Lang lang;
-
-    public BooleanProvider(@NotNull Lang lang) {
-        this.lang = lang;
-    }
 
     @Override
     public Boolean defaultNullValue() {
@@ -34,7 +28,7 @@ public final class BooleanProvider implements IParameterProvider<Boolean> {
         try {
             return Boolean.parseBoolean(s);
         } catch (NumberFormatException ex) {
-            throw new IllegalArgumentException(lang.get("invalid_boolean", s));
+            throw new IllegalArgumentException(Messages.format(Messages.Providers.invalidBoolean, s));
         }
     }
 
